--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Java JSF Develeopment</h3>
+                            <h3 class="mb-0">Java JSF Development</h3>
                             <div class="subheading mb-3">At Home</div>
                             <p>In progress</p>
                         </div>
