--- a/index.html
+++ b/index.html
@@ -1,189 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Saurabh Sali</title>
-        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
-        <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
-        <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
-    </head>
-    <body id="page-top">
-        <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top"
-                ><span class="d-block d-lg-none">Saurabh Sali</span><span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/saurabh.jpg" alt="" /></span></a
-            ><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Resume</a></li>
-                </ul>
-            </div>
-        </nav>
-        <!-- Page Content-->
-        <div class="container-fluid p-0">
-            <!-- About-->
-            <section class="resume-section" id="about">
-                <div class="resume-section-content">
-                    <h1 class="mb-0">Saurabh <span class="text-primary">Sali</span></h1>
-                    <div class="subheading mb-5">SURAT · (+91) 9825782279 · <a href="mailto:saurabhjerry2@gmail.com">saurabhjerry2@gmail.com</a></div>
-                    <p class="lead mb-5">I am experienced in web development, programming, database design and problem solving.</p>
-                    <div class="social-icons">
-                        <!-- <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a> --><a class="social-icon" href="https://github.com/albus25"><i class="fab fa-github"></i></a><!-- <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a><a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a> -->
-                    </div>
-                </div>
-            </section>
-            <hr class="m-0" />
-            <!-- Experience-->
-            <section class="resume-section" id="experience">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Experience</h2>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">PHP Web Developer</h3>
-                            <div class="subheading mb-3">Ashvi Consultancy Service</div>
-                            <p>Project Detail :- Urban Shiksha is an online learning Web Based PHP Application with MySQLi Database which enable users to create a course and promote it. It also includes multiple challenges for fun and will also be able to teach various courses to registered users with help of tutors all over the India.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">April 2019 - May 2019</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">ASP.NET Web Developer</h3>
-                            <div class="subheading mb-3">Arihant Infoware</div>
-                            <p>Project Detail :- BizzNet is a Asp.Net based on MVC web application with SqlServer Database which provides a platform to users to rate, review and search businesses and follow other Users based on popularity, category, sub-category, ratings and much more. It also allows its users (registered only) to communicate with one another through live chats, groups.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2019 - December 2019</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Java JSF Development</h3>
-                            <div class="subheading mb-3">At Home</div>
-                            <p>In progress</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">April 2020 - June 2020</span></div>
-                    </div>
-                </div>
-            </section>
-            <hr class="m-0" />
-            <!-- Education-->
-            <section class="resume-section" id="education">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Education</h2>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Veer Narmad South Gujarat University</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Information Technology - Web Development Track</div>
-                            <!-- <p>GPA: 3.23</p> -->
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">June 2016 - Jun 2019</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Veer Narmad South Gujarat University</h3>
-                            <div class="subheading mb-3">Master of Science</div>
-                            <div>Information Technology</div>
-                            <!-- <p>GPA: 3.56</p> -->
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2019 - Current</span></div>
-                    </div>
-                </div>
-            </section>
-            <hr class="m-0" />
-            <!-- Skills-->
-            <section class="resume-section" id="skills">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Skills</h2>
-                    <div class="subheading mb-3">Programming Languages & Tools</div>
-                    <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                        <!-- <li class="list-inline-item"><i class="fab fa-react"></i></li> -->
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <!-- <li class="list-inline-item"><i class="fab fa-sass"></i></li> -->
-                        <!-- <li class="list-inline-item"><i class="fab fa-less"></i></li> -->
-                        <!-- <li class="list-inline-item"><i class="fab fa-wordpress"></i></li> -->
-                        <!-- <li class="list-inline-item"><i class="fab fa-gulp"></i></li> -->
-                        <!-- <li class="list-inline-item"><i class="fab fa-grunt"></i></li> -->
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
-                    </ul>
-                    <div class="subheading mb-3">Worked On</div>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>PHP Web Development with Code Ingniter and Core
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>.Net Core with MVC and ASP.Net MVC 
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>JAVA Development
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>Android Application Development
-                        </li>
-                    </ul>
-                </div>
-            </section>
-            <hr class="m-0" />
-            <!-- Interests-->
-            <section class="resume-section" id="interests">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I am interested to work in PHP, Node JS, Angular and Angular JS.</p>
-                    <p class="mb-0">Also interested to work in .Net Core and ASP.Net MVC.</p>
-                </div>
-            </section>
-            <hr class="m-0" />
-            <!-- Awards-->
-            <section class="resume-section" id="awards">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Resume</h2>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fa fa-spinner"></i></span>In progress
-                        </li>
-                        <!-- <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>Mobile Web Specialist - Google Certification
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>1<sup>st </sup>Place - University of Colorado Boulder - Emerging Tech Competition 2009
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>1<sup>st </sup>Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>2<sup>nd </sup>Place - University of Colorado Boulder - Emerging Tech Competition 2008
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>1<sup>st </sup>Place - James Buchanan High School - Hackathon 2006
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>3<sup>rd </sup>Place - James Buchanan High School - Hackathon 2005
-                        </li> -->
-                    </ul>
-                </div>
-            </section>
+<head>
+    <meta charset="UTF-8">
+    <link rel="icon" href="/favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vite App</title>
+
+    <!-- Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com/">
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
+          rel="stylesheet">
+
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="/src/assets/css/line-awesome.min.css">
+    <link href="/src/assets/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/src/assets/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="/src/assets/css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="/src/assets/css/animate.min.css">
+    <link rel="stylesheet" href="/src/assets/css/smooth-scrollbar.css">
+    <link rel="stylesheet" href="/src/assets/css/lightbox.min.css">
+
+    <link rel="stylesheet" href="/src/assets/css/style.css">
+    <link rel="stylesheet" href="/src/assets/css/responsive.css">
+</head>
+<body class="home6-page">
+<div class="page-loader">
+    <div class="bounceball"></div>
+</div>
+
+<span class="icon-menu">
+    <span class="bar"></span>
+    <span class="bar"></span>
+</span>
+
+<div class="responsive-sidebar-menu">
+    <div class="overlay"></div>
+    <div class="sidebar-menu-inner">
+        <div class="menu-wrap">
+            <p>Menu</p>
+            <ul class="menu scroll-nav-responsive d-flex">
+                <li>
+                    <a class="scroll-to" href="#home">
+                        <i class="las la-home"></i> <span>Home</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="scroll-to" href="#about">
+                        <i class="lar la-user"></i> <span>About</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="scroll-to" href="#resume">
+                        <i class="las la-briefcase"></i> <span>Resume</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="scroll-to" href="#services">
+                        <i class="las la-stream"></i> <span>Services</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="scroll-to" href="#skills">
+                        <i class="las la-shapes"></i> <span>Skills</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="scroll-to" href="#contact">
+                        <i class="las la-envelope"></i> <span>Contact</span>
+                    </a>
+                </li>
+            </ul>
         </div>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
-        <!-- Third party plugin JS-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
-    </body>
+
+        <div class="sidebar-social">
+            <p>Social</p>
+            <ul class="social-links d-flex align-items-center">
+                <li>
+                    <a href="#"><i class="lab la-twitter"></i></a>
+                </li>
+                <li>
+                    <a href="#"><i class="lab la-dribbble"></i></a>
+                </li>
+                <li>
+                    <a href="#"><i class="lab la-instagram"></i></a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+<ul class="menu scroll-nav d-flex">
+    <li>
+        <a class="scroll-to" href="#home">
+            <span>Home</span> <i class="las la-home"></i>
+        </a>
+    </li>
+    <li>
+        <a class="scroll-to" href="#about">
+            <span>About</span> <i class="lar la-user"></i>
+        </a>
+    </li>
+    <li>
+        <a class="scroll-to" href="#resume">
+            <span>Resume</span> <i class="las la-briefcase"></i>
+        </a>
+    </li>
+    <li>
+        <a class="scroll-to" href="#services">
+            <span>Services</span> <i class="las la-stream"></i>
+        </a>
+    </li>
+    <li>
+        <a class="scroll-to" href="#skills">
+            <span>Skills</span> <i class="las la-shapes"></i>
+        </a>
+    </li>
+    <li>
+        <a class="scroll-to" href="#contact">
+            <span>Contact</span> <i class="las la-envelope"></i>
+        </a>
+    </li>
+</ul>
+
+<div class="left-sidebar">
+    <div class="sidebar-header d-flex align-items-center justify-content-between">
+        <h2>Saurabh Sali</h2>
+        <span class="designation">Full-Stack Developer</span>
+    </div>
+    <img class="me" src="/src/assets/images/me.png" alt="Me">
+    <h2 class="email">saurabhjerry2@gmail.com</h2>
+    <h2 class="address">India</h2>
+    <ul class="social-profile d-flex align-items-center flex-wrap justify-content-center">
+        <li>
+            <a href="https://in.linkedin.com/in/saurabh-sali-401b5b161/" target="_blank"><i class="lab la-linkedin"></i></a>
+        </li>
+        <li>
+            <a href="https://github.com/albus25" target="_blank"><i class="lab la-github"></i></a>
+        </li>
+    </ul>
+    <a href="#" class="theme-btn">
+        <i class="las la-envelope"></i> Contact Me!
+    </a>
+</div>
+
+<main class="body-main">
+    <div id="smooth-wrapper">
+        <div id="smooth-content"></div>
+    </div>
+</main>
+
+<script type="module" src="/src/main.js"></script>
+<script src="/src/assets/js/jquery.js"></script>
+<script src="/src/assets/js/bootstrap.bundle.min.js"></script>
+<script src="/src/assets/js/owl.carousel.js"></script>
+<script src="/src/assets/js/gsap.min.js"></script>
+<script src="/src/assets/js/ScrollTrigger.min.js"></script>
+<script src="/src/assets/js/ScrollToPlugin.min.js"></script>
+<script src="/src/assets/js/lightbox.min.js"></script>
+<script src="/src/assets/js/main.js"></script>
+<script src="/src/assets/js/ajax-form.js"></script>
+<script src="/src/assets/js/color.js"></script>
+</body>
 </html>
