--- a/index.html
+++ b/index.html
@@ -151,15 +151,15 @@
 </main>
 
 <script type="module" src="/src/main.js"></script>
-<script src="/src/assets/js/jquery.js"></script>
-<script src="/src/assets/js/bootstrap.bundle.min.js"></script>
-<script src="/src/assets/js/owl.carousel.js"></script>
-<script src="/src/assets/js/gsap.min.js"></script>
-<script src="/src/assets/js/ScrollTrigger.min.js"></script>
-<script src="/src/assets/js/ScrollToPlugin.min.js"></script>
-<script src="/src/assets/js/lightbox.min.js"></script>
-<script src="/src/assets/js/main.js"></script>
-<script src="/src/assets/js/ajax-form.js"></script>
-<script src="/src/assets/js/color.js"></script>
+<script type="module" src="/src/assets/js/jquery.js"></script>
+<script type="module" src="/src/assets/js/bootstrap.bundle.min.js"></script>
+<script type="module" src="/src/assets/js/owl.carousel.js"></script>
+<script type="module" src="/src/assets/js/gsap.min.js"></script>
+<script type="module" src="/src/assets/js/ScrollTrigger.min.js"></script>
+<script type="module" src="/src/assets/js/ScrollToPlugin.min.js"></script>
+<script type="module" src="/src/assets/js/lightbox.min.js"></script>
+<script type="module" src="/src/assets/js/main.js"></script>
+<script type="module" src="/src/assets/js/ajax-form.js"></script>
+<script type="module" src="/src/assets/js/color.js"></script>
 </body>
 </html>
