Removed jquery and lightbox js. Fixed jquery deployment issue. Lint Fixes.

--- a/index.html
+++ b/index.html
@@ -2,164 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="" rel="icon">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Portfolio</title>
 
     <!-- Font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com/">
-    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <link href="https://fonts.googleapis.com/" rel="preconnect">
+    <link crossorigin href="https://fonts.gstatic.com/" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
           rel="stylesheet">
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="/src/assets/css/line-awesome.min.css">
+    <link href="/src/assets/css/line-awesome.min.css" rel="stylesheet">
     <link href="/src/assets/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/src/assets/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="/src/assets/css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="/src/assets/css/animate.min.css">
-    <link rel="stylesheet" href="/src/assets/css/smooth-scrollbar.css">
-    <link rel="stylesheet" href="/src/assets/css/lightbox.min.css">
-
-    <link rel="stylesheet" href="/src/assets/css/style.css">
-    <link rel="stylesheet" href="/src/assets/css/responsive.css">
+    <link href="/src/assets/css/owl.theme.default.min.css" rel="stylesheet">
+    <link href="/src/assets/css/animate.min.css" rel="stylesheet">
+    <link href="/src/assets/css/smooth-scrollbar.css" rel="stylesheet">
+    <link href="/src/assets/css/lightbox.min.css" rel="stylesheet">
+    <link href="/src/assets/css/style.css" rel="stylesheet">
+    <link href="/src/assets/css/responsive.css" rel="stylesheet">
 </head>
 <body class="home6-page">
-<div class="page-loader">
-    <div class="bounceball"></div>
-</div>
-
-<span class="icon-menu">
-    <span class="bar"></span>
-    <span class="bar"></span>
-</span>
-
-<div class="responsive-sidebar-menu">
-    <div class="overlay"></div>
-    <div class="sidebar-menu-inner">
-        <div class="menu-wrap">
-            <p>Menu</p>
-            <ul class="menu scroll-nav-responsive d-flex">
-                <li>
-                    <a class="scroll-to" href="#home">
-                        <i class="las la-home"></i> <span>Home</span>
-                    </a>
-                </li>
-                <li>
-                    <a class="scroll-to" href="#about">
-                        <i class="lar la-user"></i> <span>About</span>
-                    </a>
-                </li>
-                <li>
-                    <a class="scroll-to" href="#resume">
-                        <i class="las la-briefcase"></i> <span>Resume</span>
-                    </a>
-                </li>
-                <li>
-                    <a class="scroll-to" href="#services">
-                        <i class="las la-stream"></i> <span>Services</span>
-                    </a>
-                </li>
-                <li>
-                    <a class="scroll-to" href="#skills">
-                        <i class="las la-shapes"></i> <span>Skills</span>
-                    </a>
-                </li>
-                <li>
-                    <a class="scroll-to" href="#contact">
-                        <i class="las la-envelope"></i> <span>Contact</span>
-                    </a>
-                </li>
-            </ul>
-        </div>
-
-        <div class="sidebar-social">
-            <p>Social</p>
-            <ul class="social-links d-flex align-items-center">
-                <li>
-                    <a href="#"><i class="lab la-twitter"></i></a>
-                </li>
-                <li>
-                    <a href="#"><i class="lab la-dribbble"></i></a>
-                </li>
-                <li>
-                    <a href="#"><i class="lab la-instagram"></i></a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</div>
-
-<ul class="menu scroll-nav d-flex">
-    <li>
-        <a class="scroll-to" href="#home">
-            <span>Home</span> <i class="las la-home"></i>
-        </a>
-    </li>
-    <li>
-        <a class="scroll-to" href="#about">
-            <span>About</span> <i class="lar la-user"></i>
-        </a>
-    </li>
-    <li>
-        <a class="scroll-to" href="#resume">
-            <span>Resume</span> <i class="las la-briefcase"></i>
-        </a>
-    </li>
-    <li>
-        <a class="scroll-to" href="#services">
-            <span>Services</span> <i class="las la-stream"></i>
-        </a>
-    </li>
-    <li>
-        <a class="scroll-to" href="#skills">
-            <span>Skills</span> <i class="las la-shapes"></i>
-        </a>
-    </li>
-    <li>
-        <a class="scroll-to" href="#contact">
-            <span>Contact</span> <i class="las la-envelope"></i>
-        </a>
-    </li>
-</ul>
-
-<div class="left-sidebar">
-    <div class="sidebar-header d-flex align-items-center justify-content-between">
-        <h2>Saurabh Sali</h2>
-        <span class="designation">Full-Stack Developer</span>
-    </div>
-    <img class="me" src="/src/assets/images/me.png" alt="Me">
-    <h2 class="email">saurabhjerry2@gmail.com</h2>
-    <h2 class="address">India</h2>
-    <ul class="social-profile d-flex align-items-center flex-wrap justify-content-center">
-        <li>
-            <a href="https://in.linkedin.com/in/saurabh-sali-401b5b161/" target="_blank"><i class="lab la-linkedin"></i></a>
-        </li>
-        <li>
-            <a href="https://github.com/albus25" target="_blank"><i class="lab la-github"></i></a>
-        </li>
-    </ul>
-    <a href="#" class="theme-btn">
-        <i class="las la-envelope"></i> Contact Me!
-    </a>
-</div>
-
-<main class="body-main">
-    <div id="smooth-wrapper">
-        <div id="smooth-content"></div>
-    </div>
-</main>
-
-<script type="module" src="/src/main.js"></script>
-<script type="module" src="/src/assets/js/jquery.js"></script>
-<script type="module" src="/src/assets/js/bootstrap.bundle.min.js"></script>
-<script type="module" src="/src/assets/js/owl.carousel.js"></script>
-<script type="module" src="/src/assets/js/gsap.min.js"></script>
-<script type="module" src="/src/assets/js/ScrollTrigger.min.js"></script>
-<script type="module" src="/src/assets/js/ScrollToPlugin.min.js"></script>
-<script type="module" src="/src/assets/js/lightbox.min.js"></script>
-<script type="module" src="/src/assets/js/main.js"></script>
-<script type="module" src="/src/assets/js/ajax-form.js"></script>
-<script type="module" src="/src/assets/js/color.js"></script>
+<div id="app"></div>
+<script src="/src/main.js" type="module"></script>
+<script src="/src/assets/js/bootstrap.bundle.min.js" type="module"></script>
+<script src="/src/assets/js/main.js" type="module"></script>
+<script src="/src/assets/js/color.js" type="module"></script>
 </body>
 </html>
